Assets Folder URL change

--- a/variables.scss
+++ b/variables.scss
@@ -1,5 +1,5 @@
 $icomoon-font-family: "icomoon" !default;
-$icomoon-font-path: "fonts" !default;
+$icomoon-font-path: "/assets/icons/fonts" !default;
 
 $icon-add-outline: "\e900";
 $icon-add-solid: "\e901";
@@ -2790,4 +2790,3 @@ $icon-snowflake-o: "\f2dc";
 $icon-superpowers: "\f2dd";
 $icon-wpexplorer: "\f2de";
 $icon-meetup: "\f2e0";
-
